style.css
@font-face {
  font-family: "FenulVF";
  src: url("FenulBETAVF.ttf") format("woff2-variations");
}

@font-face {
  font-family: "SaansVF";
  src: url("SaansVF.ttf") format("woff2-variations");
}

:root {
  --bg: #111;
  --text: #eee;
}

* {
  margin: 0;
  padding: 0;
  font-variant-ligatures: common-ligatures;
  font-size: 16px;
}

body {
  background-color: var(--bg);
  color: var(--text);
  margin: auto;
  width: 80%;
  max-width: 1920px;
}

img {
  max-height: 100%;
  max-width: 100%;
}

hr {
  margin: 4em 0 4em 0;
  border: none;
  border-top: 2px var(--text) solid;
}

/*
wght 100-900
wdth 0-100
*/

h1,
h2,
h3,
h4 {
  font-family: FenulVF;
}

h1 {
  font-size: 25vw;
  transition-timing-function: ease;
  transition-property: font-variation-settings;
  text-align: center;

  font-variation-settings: "wght" 900 "wdth" 100;
}

h2 {
  font-size: 3em;
  font-weight: 900;
}

p {
  /* sans body */
  font-family: SaansVF;
  font-weight: 380;
}

.row {
  display: flex;
  flex-direction: row;
  gap: 2em;
}

.row > div {
  width: calc(50% - 1em);
}

.glyph-sample {
  font-family: FenulVF;
  font-size: 5.5vw;
  line-height: 110%;
  word-wrap: break-word;

  transition-duration: 500ms;
  transition-property: font-variation-settings;
}

.custom-select {
  display: inline-block;
  position: relative;

  border: 3px solid var(--text);
  border-radius: 0.7em;
  margin: 0 1em 2em 0;
}

.custom-select::before {
  content: "^";
  font-family: SaansVF;
  transform: rotate(180deg);
  pointer-events: none;
  position: absolute;
  right: 0.5em;
  top: 0.3em;
}

.custom-select select {
  padding: 0.4em 2em 0.5em 1em;
  appearance: none;
  border: none;
  outline: none;
  background: none;
  color: var(--text);
}

